[package]
name = "bengali_keyboard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bengali_keyboard"
path = "src/main.rs"

[dependencies]
winapi = { version = "0.3", features = [
    "winuser", "processthreadsapi", "winbase", "shellapi", 
    "commctrl", "libloaderapi", "errhandlingapi", "stringapiset",
    "memoryapi", "handleapi"
] }
windows = { version = "0.52", features = [
    "Win32_Foundation", "Win32_UI_WindowsAndMessaging", 
    "Win32_UI_Shell", "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi", "Win32_UI_Controls"
] }
once_cell = "1.19"
parking_lot = "0.12"

[build-dependencies]
winres = "0.1"